修改成使用picstore库的连接

--- a/ZhongXinPay/Web.config
+++ b/ZhongXinPay/Web.config
@@ -12,6 +12,7 @@
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-ZhongXinPay-20160908022009.mdf;Initial Catalog=aspnet-ZhongXinPay-20160908022009;Integrated Security=True"
       providerName="System.Data.SqlClient" />
     <add name="ROCKConnDebug" connectionString="Data Source=(local);Initial Catalog=YarnTrade;Persist Security Info=True;User ID=sa;Password=sinotex;Connect Timeout=300;" />
+    <add name="ROCKConnDebugPic" connectionString="Data Source=(local);Initial Catalog=PicStore;Persist Security Info=True;User ID=sa;Password=sinotex;Connect Timeout=300;" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
