修改分页等基础功能，添加对象字段及对象名称的获取助手类等

--- a/Rock.Framework/Rock.Framework.csproj
+++ b/Rock.Framework/Rock.Framework.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Attributes\PrimaryKeyAttribute.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Common\IEntity.cs" />
+    <Compile Include="DataAccess\DBHelper.cs" />
     <Compile Include="DataAccess\IDbContext.cs" />
     <Compile Include="DataAccess\MSSqlContext.cs" />
     <Compile Include="DataAccess\SelectStatement.cs" />
