--- a/ZhongXinPay/ZhongXinPay.csproj
+++ b/ZhongXinPay/ZhongXinPay.csproj
@@ -230,6 +230,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Payment\Call.cshtml" />
+    <Content Include="Views\Payment\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
